<resources>
    <string name="app_name">LibraryApp</string>
    <string name="title_activity_drawer">Drawer</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Admin</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="Login">Login</string>
    <string name="Pass">Password</string>
    <string name="Username">Username</string>
    <string name="menu_delete">Delete</string>
    <string name="menu_insert">Insert</string>
    <string name="menu_search">Search</string>
    <string name="menu_update">Update</string>
    <string name="enter_id">Enter ID</string>
    <string name="welcome_to_our_library_app">Welcome to our App!</string>
    <string name="explore">Explore</string>
    <string name="book">Book</string>
    <string name="member">Member</string>
    <string name="loan">Loan</string>
    <string name="name">Name</string>
    <string name="email_address">Email Address</string>
    <string name="insert_data">Insert Data</string>
    <string name="update_member">Update Member</string>
    <string name="delete_member">Delete Member</string>
    <string name="title">Title</string>
    <string name="author">Author</string>
    <string name="pages">Pages</string>
    <string name="insert_book">Insert Book</string>
    <string name="update_book">Update Book</string>
    <string name="delete_book">Delete Book</string>
    <string name="insert_member">Insert Member</string>
    <string name="fill_the_new_details">Fill the new details:</string>
    <string name="select_book">Select Book:</string>
    <string name="fill_the_details">Fill the details:</string>
    <string name="select_member">Select a Member:</string>
    <string name="library_section">Library Section</string>
    <string name="select_section">Select a Section:</string>
    <string name="location">Location</string>
    <string name="insert_section">Insert Section</string>
    <string name="update_section">Update Section</string>
    <string name="delete_section">Delete Section</string>
    <string name="select_library_section">Select a Library Section:</string>
    <string name="search">Search</string>
    <string name="select_an_option">Select an Option:</string>
    <string name="insert_loan">Insert Loan</string>
    <string name="update_loan">Update Loan</string>
    <string name="delete_loan">Delete Loan</string>
    <string name="select_a_book">Select a Book:</string>
    <string name="select_a_member">Select a Member:</string>
    <string name="due_date">Due Date</string>
    <string name="select_a_loan">Select a Loan:</string>

    <string-array name="SpinnerOptions">
        <item>Books per Library Section</item>
        <item>All Members</item>
        <item>Books above 300 Pages</item>
        <item>Overdue Loans</item>
        <item>Available Books</item>
        <item>Days Remaining per Loaned Book</item>
    </string-array>

</resources>