<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">
    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.libraryapp.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home">
        <action
            android:id="@+id/action_nav_home_to_nav_search"
            app:destination="@id/nav_search"
            app:popUpTo="@id/nav_home"
            app:popUpToInclusive="true" />
    </fragment>
    <fragment
        android:id="@+id/nav_search"
        android:name="com.example.libraryapp.ui.search.SearchFragment"
        android:label="@string/menu_search"
        tools:layout="@layout/fragment_search" />
    <fragment
        android:id="@+id/nav_insert_book"
        android:name="com.example.libraryapp.ui.insert.InsertBookFragment"
        android:label="@string/insert_book"
        tools:layout="@layout/fragment_insert_book" />
    <fragment
        android:id="@+id/nav_update_book"
        android:name="com.example.libraryapp.ui.update.UpdateBookFragment"
        android:label="@string/update_book"
        tools:layout="@layout/fragment_update_book" />
    <fragment
        android:id="@+id/nav_delete_book"
        android:name="com.example.libraryapp.ui.delete.DeleteBookFragment"
        android:label="@string/delete_book"
        tools:layout="@layout/fragment_delete_book" />
    <fragment
        android:id="@+id/nav_insert_member"
        android:name="com.example.libraryapp.ui.insert.InsertMemberFragment"
        android:label="@string/insert_member"
        tools:layout="@layout/fragment_insert_member" />
    <fragment
        android:id="@+id/nav_update_member"
        android:name="com.example.libraryapp.ui.update.UpdateMemberFragment"
        android:label="@string/update_member"
        tools:layout="@layout/fragment_update_member" />
    <fragment
        android:id="@+id/nav_delete_member"
        android:name="com.example.libraryapp.ui.delete.DeleteMemberFragment"
        android:label="@string/delete_member"
        tools:layout="@layout/fragment_delete_member" />
    <fragment
        android:id="@+id/nav_insert_section"
        android:name="com.example.libraryapp.ui.insert.InsertSectionFragment"
        android:label="@string/insert_section"
        tools:layout="@layout/fragment_insert_section" />
    <fragment
        android:id="@+id/nav_update_section"
        android:name="com.example.libraryapp.ui.update.UpdateSectionFragment"
        android:label="@string/update_section"
        tools:layout="@layout/fragment_update_section" />
    <fragment
        android:id="@+id/nav_delete_section"
        android:name="com.example.libraryapp.ui.delete.DeleteSectionFragment"
        android:label="@string/delete_section"
        tools:layout="@layout/fragment_delete_section" />
    <fragment
        android:id="@+id/nav_insert_loan"
        android:name="com.example.libraryapp.ui.insert.InsertLoanFragment"
        android:label="@string/insert_loan"
        tools:layout="@layout/fragment_insert_loan" />
    <fragment
        android:id="@+id/nav_update_loan"
        android:name="com.example.libraryapp.ui.update.UpdateLoanFragment"
        android:label="@string/update_loan"
        tools:layout="@layout/fragment_update_loan" />
    <fragment
        android:id="@+id/nav_delete_loan"
        android:name="com.example.libraryapp.ui.delete.DeleteLoanFragment"
        android:label="@string/delete_loan"
        tools:layout="@layout/fragment_delete_loan" />
</navigation>