<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_library">

    <!-- CardView to contain the elements -->
    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:background="@drawable/shapeforlogin"
        app:cardCornerRadius="8dp"
        app:cardElevation="4dp">

        <LinearLayout
            android:layout_width="325dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <!-- Text indicating "Select Book" above the Spinner -->
            <TextView
                android:id="@+id/textViewSelectBook"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp"
                android:text="@string/select_book"
                android:textColor="@android:color/black"
                android:textSize="15sp" />

            <!-- Spinner to choose an existing option -->
            <Spinner
                android:id="@+id/spinnerOptions"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginBottom="16dp"
                android:background="@drawable/spinner_border"
                android:paddingStart="16dp"
                android:paddingTop="8dp"
                android:paddingEnd="16dp"
                android:paddingBottom="8dp"
                android:spinnerMode="dropdown" />

            <TextView
                android:id="@+id/textViewWriteDetails"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="4dp"
                android:text="@string/fill_the_new_details"
                android:textColor="@android:color/black"
                android:textSize="15sp" />
            <!-- TextInputLayout for Book Title -->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayoutTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                app:boxBackgroundColor="@color/white"
                app:boxStrokeColor="@color/black"
                app:hintTextColor="@color/black">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editTextTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/title"
                    android:inputType="text" />
            </com.google.android.material.textfield.TextInputLayout>

            <!-- TextInputLayout for Author -->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayoutAuthor"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                app:boxBackgroundColor="@color/white"
                app:boxStrokeColor="@color/black"
                app:hintTextColor="@color/black">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editTextAuthor"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/author"
                    android:inputType="textPersonName" />
            </com.google.android.material.textfield.TextInputLayout>

            <!-- TextInputLayout for Number of Pages -->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayoutPages"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                app:boxBackgroundColor="@color/white"
                app:boxStrokeColor="@color/black"
                app:hintTextColor="@color/black">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editTextPages"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/pages"
                    android:inputType="number" />
            </com.google.android.material.textfield.TextInputLayout>
            <TextView
                android:id="@+id/textViewSelectSection"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp"
                android:layout_marginTop="16dp"
                android:text="@string/select_library_section"
                android:textColor="@android:color/black"
                android:textSize="15sp" />
            <!-- Spinner to select section -->
            <Spinner
                android:id="@+id/spinnerOptions1"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginBottom="16dp"
                android:background="@drawable/spinner_border"
                android:paddingStart="16dp"
                android:paddingTop="8dp"
                android:paddingEnd="16dp"
                android:paddingBottom="8dp"
                android:spinnerMode="dropdown" />
            <!-- Button to Insert -->
            <com.google.android.material.button.MaterialButton
                android:id="@+id/updateButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/update_book" />


        </LinearLayout>
    </androidx.cardview.widget.CardView>

</RelativeLayout>
